<resources>
    <string name="app_name">Demo0851</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings1">Settings</string>
    <string name="action_about">关于</string>
    <string name="title_activity_login">Log in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_in">注册</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Sign up</string>
    <string name="title_starticle_list">stArticleTotal</string>
    <string name="title_starticle_detail">stArticle Detail</string>
    <string name="title_stitem_list">stItems</string>
    <string name="title_stitem_detail">stItem Detail</string>
</resources>
